# nvme-stas

./: .coveragerc.in  .dockerignore  .gitignore  .readthedocs.yaml  ADDENDUM.md  CLAUDE.md  CONTAINERS.md  CONTRIBUTING.md  DISTROS.md  Dockerfile  LICENSE  Makefile  NEWS.md  NVME-STAS-CLI_COMPARISON.md  README.md  TESTING.md  configure  coverage.sh.in  docker-compose.yml  meson.build  meson_options.txt  nvme-stas.spec.in  pyproject.toml  ruff.toml  stacctl.py  stacd.py  stafctl.py  stafd.py  stasadm.py
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  docker-publish.yml  docker-test.yml  linters.yml  meson-test.yml  pylint.yml
Documentation/: DISTROS.md
debian/: .gitignore  changelog  control  copyright  nvme-stas.postinst  nvme-stas.postrm  rules
doc/: Makefile  api.rst  conf.py  conf.py.in  dbus-idl-to-docbooks.py  index.rst  meson.build  nvme-stas.xml  quickstart.rst  requirements.txt  stacctl.xml  stacd.conf.xml  stacd.service.xml  stacd.xml  stafctl.xml  stafd.conf.xml  stafd.service.xml  stafd.xml  standard-conf.xml  stas-config.target.xml  stas-config@.service.xml  stasadm.xml
doc/man/: dbus-idl-to-docbooks.py  html.xsl  man.xsl  meson.build  nvme-stas.xml  stacd.conf.xml  stacd.xml  stafctl.xml  stafd.conf.xml  standard-options.xml  stas-config.target.xml
doc/readthedocs/: conf.py  index.rst  installation.rst  meson.build  nvme-stas.rst  org.nvmexpress.stac.debug.rst  org.nvmexpress.stac.rst  org.nvmexpress.staf.debug.rst  org.nvmexpress.staf.rst  stacctl.rst  stacd-index.rst  stacd.conf.rst  stacd.rst  stacd.service.rst  stafctl.rst  stafd-index.rst  stafd.conf.rst  stafd.rst  stafd.service.rst  stas-config.target.rst  stas-config@.service.rst  stasadm.rst  sys.conf.rst
doc/rst/: nvme-stas.html  org.nvmexpress.stac.debug.html  org.nvmexpress.stac.html  org.nvmexpress.staf.debug.html  org.nvmexpress.staf.html  stacctl.html  stacd.conf.html  stacd.html  stacd.service.html  stafctl.html  stafd.conf.html  stafd.html  stafd.service.html  stas-config.target.html  stas-config@.service.html  stasadm.html  sys.conf.html
etc/dbus-1/system.d/: meson.build  org.nvmexpress.stac.in.conf  org.nvmexpress.staf.in.conf
etc/stas/: stacd.conf  stafd.conf  sys.conf.doc
man/: dbus-idl-to-docbooks.py  genlist-from-docbooks.py  meson.build  nvme-stas.xml  stacd.conf.xml  stacd.service.xml  stafd.conf.xml  stafd.service.xml  standard-conf.xml  standard-options.xml  stasadm.xml  sys.conf.xml
staslib/: __init__.py  avahi.py  conf.py  ctrl.py  defs.py  glibudev.py  gutil.py  iputil.py  log.py  meson.build  nbft.py  service.py  singleton.py  stacd.idl  stafd.idl  stas.py  timeparse.py  trid.py  udev.py  version.py
subprojects/: libnvme.wrap  nvme-cli.wrap
test/: meson.build  pylint.rc  test-avahi.py  test-config.py  test-controller.py  test-defs.py  test-gtimer.py  test-gutil.py  test-iputil.py  test-log.py  test-nbft.py  test-nbft_conf.py  test-nvme_options.py  test-service.py  test-stas.py  test-stasadm.py  test-timeparse.py  test-transport_id.py  test-udev.py  test-version.py  vermin-tools.conf  vermin.conf
usr/lib/systemd/system/: meson.build  stacd.in.service  stafd.in.service  stas-config.in.target  stas-config.target  stas-config@.service
utils/: mk-discovery-conf.py
utils/nvmet/: auth.conf  loop.conf  nvmet-large.conf  nvmet.conf  nvmet.py
